[package]
name = "node-cluster"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0.18", features = ["derive"] }
serde_json = "1.0.6"
tokio = { version = "1.10.1", features = ["full"] }
reqwest = { version = "0.11.6", features = ["json"] }
hex = "0.4.3"
base64 = "0.13"
async-trait = "0.1.51"
dotenvy = "0.15.7"
anyhow = "1.0.72"
rand = "0.8.4"
env_logger = "0.10.0"

